--- a/skills/index.html
+++ b/skills/index.html
@@ -24,7 +24,7 @@
 }
 
 </style>
-<head><title>Kedar's Skills</title></head>
+<head><title>Kedar's Skills</title><link rel="shortcut icon" href="favicon.ico"/></head>
 <body>
 <script src="https://d3js.org/d3.v3.min.js"></script>
 <script>
